remove table fixed, retain styles, just make table display block so we can scroll on overflow

--- a/src/components/Story/Body.less
+++ b/src/components/Story/Body.less
@@ -114,8 +114,8 @@
 
   table {
     width: 100%;
-    display: table;
-    table-layout: fixed;
+    display: block;
+    overflow: auto;
 
     tr > th {
       text-align: left;
